0.6.5/_sources/api/napari.components.Dims.rst
napari.components.Dims
======================

.. currentmodule:: napari.components

.. autoclass:: Dims
   :members:
   :show-inheritance:
   :inherited-members:

   

   
   .. rubric:: Methods

   .. autosummary::
   
   
   
      ~Dims.construct
   
   
      ~Dims.copy
   
   
      ~Dims.dict
   
   
      ~Dims.enums_as_values
   
   
      ~Dims.from_orm
   
   
      ~Dims.json
   
   
      ~Dims.parse_file
   
   
      ~Dims.parse_obj
   
   
      ~Dims.parse_raw
   
   
      ~Dims.reset
   
   
      ~Dims.roll
   
   
      ~Dims.schema
   
   
      ~Dims.schema_json
   
   
      ~Dims.set_axis_label
   
   
      ~Dims.set_current_step
   
   
      ~Dims.set_point
   
   
      ~Dims.set_range
   
   
      ~Dims.transpose
   
   
      ~Dims.update
   
   
      ~Dims.update_forward_refs
   
   
      ~Dims.validate
   
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Dims.current_step
      ~Dims.displayed
      ~Dims.displayed_order
      ~Dims.events
      ~Dims.margin_left_step
      ~Dims.margin_right_step
      ~Dims.not_displayed
      ~Dims.nsteps
      ~Dims.thickness
      ~Dims.thickness_step
      
      
      
      
      
      
      
      
      
      
   
   

   .. rubric:: Details